--- a/engagement-dashboard-snowflake/package.json
+++ b/engagement-dashboard-snowflake/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
-    "app-engagement": "file:dist/nodejs/app-engagement@0.1.0-0.2.0" 
+    "app-engagement": "file:dist/nodejs/app-engagement@0.1.0-0.2.0",
+    "snowflake-demo-package-fast": "file:dist/nodejs/snowflake-demo-package-fast@0.1.0-0.2.0"
   }
 }
