--- a/csharp-query-interface/ExampleApp/ExampleApp.csproj
+++ b/csharp-query-interface/ExampleApp/ExampleApp.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AppEngagement" Version="0.1.0-0.1.0" />
+  </ItemGroup>
+
 </Project>
