--- a/engagement-dashboard-snowflake/package.json
+++ b/engagement-dashboard-snowflake/package.json
@@ -20,8 +20,8 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "snowflake-demo-package-fast": "file:dist/nodejs/snowflake-demo-package-fast-0.1.0-0.2.0.tgz",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "snowflake-demo-package-fast": "file:lib/nodejs/snowflake-demo-package-fast@0.1.0-0.2.0"
+    "typescript": "5.2.2"
   }
 }
